test_pages_result_2.txt
============================= test session starts =============================
platform win32 -- Python 3.11.14, pytest-9.0.2, pluggy-1.6.0
rootdir: C:\home\VeldraML
configfile: pyproject.toml
plugins: dash-2.18.2, cov-7.0.0
collected 0 items / 1 error

=================================== ERRORS ====================================
______________ ERROR collecting tests/test_gui_pages_and_init.py ______________
.venv\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
.venv\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
.uv_python\cpython-3.11.14-windows-x86_64-none\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.venv\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_gui_pages_and_init.py:9: in <module>
    from veldra.gui.pages import config_page, run_page, results_page
src\veldra\gui\pages\__init__.py:1: in <module>
    from . import config_page, data_page, results_page, run_page
E     File "C:\home\VeldraML\src\veldra\gui\pages\config_page.py", line 81
E       ),
E       ^
E   SyntaxError: closing parenthesis ')' does not match opening parenthesis '[' on line 64
=========================== short test summary info ===========================
ERROR tests/test_gui_pages_and_init.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.15s ===============================
